# basalt

./: Cargo.toml  basalt.toml
src/: config.rs  connection.rs  main.rs  server.rs  status.rs  types.rs  util.rs
src/auth/: legacy.rs  microsoft.rs  mod.rs  yggdrasil.rs
src/classic/: types.rs
src/modern/: dummy.rs  mod.rs  types.rs  v754.rs
src/modern/types/: chat.rs
src/protocol/modern/: mod.rs  v754.rs
src/types/: classic.rs  java.rs  mod.rs  modern.rs
